# beadhive

./: .gitignore  .markdownlint-cli2.jsonc  .mise.toml  Brewfile  CHANGELOG.md  CLAUDE.md  DOLT_REMOTE.md  INSTALL.md  README.md  justfile  manifest  pyproject.toml  rkcbq1en3jknoeimr9mdmhjcmjindoor
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: analyst.md  coordinator.md  developer.md  epic-coordinator-deep.md  epic-coordinator.md  merger.md  planner.md  reviewer.md  superintendent.md
.githooks/: commit-msg  pre-commit
.github/workflows/: release.yml
docs/: AGF.md  ASSURANCE.md  BEAD-BACKENDS.md  BEADS-SYNC.md  CLI.md  CONFIGURATION.md  CONTROL-PLANE.md  DESIGN.md  DIAGNOSTICS.md  DOLT.md  HIVES.md  HUB.md  INTEGRATIONS.md  LABELS.md  MCP.md  METADATA-CACHE.md  OBSERVABILITY.md  ONBOARDING.md  OVERVIEW.md  PASSTHROUGH.md  PLANNING-PLANE.md  REPORT-CHANNEL.md  RIGS.md  WORK.md  WORKTREES.md
docs/design/: ade-client-interfaces.md  bead-backend-abstraction.md  br-agf-fit-and-state-compat-layers.md  cli-mcp-naming-conventions-adr.md  cli-mcp-surface-audit.md  config-schema-versioning.md  gas-frameworks-comparison.md  limn-name-collision-check.md  limn-naming-strategy-adr.md  mcp-name-single-sourcing-adr.md  planning-seat-ux-and-spike-loop.md  rig-to-hive-rename.md  roles-rbac-matrix.md  roles-rbac-reconciliation-log.md  toolchain-declaration.md
docs/schemas/: report-channel.example.json  report-channel.schema.json
docs/spikes/: TEMPLATE.md  bh-iads.1-cli-as-source.md  bh-ykyi.1-name-registry.md  fekf-10-resumable-agent.md
gl46n440rrqngdis6mcqtfnfv27qd5jm.darc/: 0002
plugins/agf/: .mcp.json  MCP-VERIFICATION.md
plugins/agf/.claude-plugin/: plugin.json
plugins/agf/agents/: analyst.md  controller.md  coordinator.md  custodian.md  developer.md  director.md  dispatcher.md  epic-coordinator-deep.md  epic-coordinator.md  merger.md  planner.md  reviewer.md  superintendent.md  supervisor.md  warden.md
plugins/agf/skills/backfill/: GUIDE.md  SKILL.md
plugins/agf/skills/backfill/scripts/: reconcile.sh
plugins/agf/skills/backfill/steps/: 020-classify.md  (+1 more)
plugins/agf/skills/beadery-concepts/: SKILL.md
plugins/agf/skills/beadhive-concepts/: SKILL.md
plugins/agf/skills/control/: SKILL.md
plugins/agf/skills/coordinator/: SKILL.md
plugins/agf/skills/developer/: SKILL.md
plugins/agf/skills/dispatcher/: SKILL.md
plugins/agf/skills/epic-coordinator/: SKILL.md
plugins/agf/skills/merger/: SKILL.md
plugins/agf/skills/planner/: SKILL.md
plugins/agf/skills/reviewer/: SKILL.md
plugins/agf/skills/setup/: SKILL.md
plugins/agf/skills/setup-git-workspace/: SKILL.md
plugins/agf/skills/superintendent/: SKILL.md
plugins/agf/skills/work/: SKILL.md
plugins/bh/: MCP-VERIFICATION.md
plugins/bh/.claude-plugin/: plugin.json
plugins/bh/agents/: analyst.md  controller.md  custodian.md  developer.md  director.md  dispatcher.md  merger.md  planner.md  reviewer.md  supervisor.md  warden.md
plugins/bh/skills/beadhive-concepts/: SKILL.md
plugins/bh/skills/control/: SKILL.md
plugins/bh/skills/developer/: SKILL.md
plugins/bh/skills/dispatcher/: SKILL.md
plugins/bh/skills/merger/: SKILL.md
plugins/bh/skills/planner/: SKILL.md
plugins/bh/skills/setup/: SKILL.md
plugins/bh/skills/setup-git-workspace/: SKILL.md
scripts/: profile_fleet_health.py
skills/coordinator/: SKILL.md
skills/developer/: SKILL.md
skills/merger/: SKILL.md
skills/planner/: SKILL.md
skills/reviewer/: SKILL.md
skills/superintendent/: SKILL.md
skills/work/: SKILL.md
src/beadhive/: __init__.py  adopt.py  archive.py  bd.py  claim_authority.py  cli.py  compose.py  config.py  config_schema.py  config_validate.py  conflict_estimator.py  contributor.py  doctor.py  dolt.py  engine.py  escalate.py  ghpr.py  git.py  gitauth.py  gitworkspace.py  gitworkspace_plugin.py  guard.py  hive.py  hive_migrate.py  hive_ready.py  hive_repair.py  hive_sync.py  home_migration.py  hq.py  hub.py  identity.py  log.py  mcp.py  metadata.py  molecule.py  observaloop.py  observaloop_env.py  onboard.py  orca.py  otel.py  (+33 more)
src/beadhive/assets/: AGF-hint.md  claude-settings.json  opencode.json
src/beadhive/assets/observaloop/: bh-dashboard.json  cli-metrics-preset.yaml  ws-dashboard.json
src/beadhive/assets/opencode-plugins/: bh-steer.js
src/beadhive/templates/: config.example.yaml  docker-compose.otel.yml  docker-compose.yml  env.example
src/ws/: __init__.py  adopt.py  archive.py  bd.py  cli.py  config.py  doctor.py  escalate.py  git.py  gitworkspace.py  guard.py  hub.py  identity.py  log.py  mcp.py  molecule.py  observaloop.py  onboard.py  otel.py  plan.py  registry.py  report.py  report_target.py  rig.py  rig_ready.py  role.py  route.py  run.py  safety.py  schedule.py  state.py  survey.py  triage.py  validate.py  work.py  work_group.py  work_show.py  worktree.py  worktree_merge.py  wt_status.py
src/ws/assets/: AGF-hint.md  PRIME.md  claude-settings.json
src/ws/assets/observaloop/: ws-dashboard.json
src/ws/templates/: config.example.yaml
tests/: conftest.py  fixture_config.yaml  fixture_workspace.toml  test_adopt.py  test_agf_modalities.py  test_agf_remote_sandbox.py  test_bd_json_seam.py  test_bd_repo_sync_additive.py  test_bh.py  test_claim_authority.py  test_config.py  test_config_claude.py  test_config_dotted.py  test_config_harness.py  test_config_observaloop.py  test_config_offer.py  test_config_orca.py  test_config_release.py  test_config_schema.py  test_config_validate.py  test_config_validate_cli.py  test_config_work.py  test_config_worktrees.py  test_conflict_estimator.py  test_contributor.py  test_deep_nested_paths.py  test_doctor.py  test_dolt_embedded_engine_int.py  test_engine.py  test_error_boundaries.py  test_escalate.py  test_gitauth.py  test_gitworkspace_groups.py  test_gitworkspace_plugin.py  test_guard.py  test_help_hygiene.py  test_hive_add_rm.py  test_hive_agents.py  test_hive_agf_hint.py  test_hive_archive.py  (+105 more)
tests/harness/: __init__.py  beads.py  graph.py  history.py  hive.py  modalities.py  noisy.py  render.py  rig.py  world.py
(+22 files in other folders)
