[project]
name = "ws"
version = "0.1.0"
description = "Workspace CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "ruamel.yaml>=0.18",
    # Logging foundation: structlog drives dual-mode output (rich/ANSI on a TTY,
    # JSON for machines) + the stdlib bridge. Core (not an extra) because logging
    # is foundational — every command routes diagnostics through it. Floor matches
    # the configure/ProcessorFormatter/ConsoleRenderer API the module is written
    # against. OTel SDK stays a later, optional concern (ws[otel], bead cit.2).
    "structlog>=24",
]

[project.optional-dependencies]
# `ws[mcp]` — pulls in FastMCP for `ws-mcp` / `ws mcp serve`. Kept optional so the
# core CLI installs without it; the entrypoints fail gracefully when it's absent.
# Floor matches the API the tools were written + verified against (3.4.x: bare
# `@mcp.tool`, dict→structured_content, ToolError propagation) — same pin as dev.
mcp = [
    "fastmcp>=3.4,<4",
]
# `ws[otel]` — the OpenTelemetry SDK + OTLP (gRPC) exporters that `ws.otel.init` wires into
# Tracer/Meter/Logger providers + the structlog→OTel log bridge. Kept optional + lazily
# imported so `import ws.otel` (and the core CLI) install/run fine without it; init() no-ops
# with an install hint when the flag is on but these are absent. structlog is listed here too
# (it's already a core dep) so the bridge surface is explicit for this extra. Floors match the
# SDK API the module targets: 1.x providers (`Resource.create`, `set_*_provider`), OTLP
# `*Exporter`, Batch processors, and `sdk._logs.LoggingHandler`.
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "structlog>=24",
]

[project.scripts]
ws = "ws.cli:main"
ws-mcp = "ws.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ws"]

[tool.hatch.build.targets.wheel.force-include]
"plugins/agf/skills" = "ws/assets/skills"
"plugins/agf/agents" = "ws/assets/agents"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    # FastMCP so the in-memory `Client(server)` self-checks run against the real
    # server (the tools assert structured I/O + ToolError mapping).
    "fastmcp>=3.4,<4",
]

[tool.pytest.ini_options]
markers = [
    "integration: real-bd AGF topology harness (slower; needs the bd binary)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
