[project]
name = "ws"
version = "0.1.0"
description = "Workspace CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "ruamel.yaml>=0.18",
    # Logging foundation: structlog drives dual-mode output (rich/ANSI on a TTY,
    # JSON for machines) + the stdlib bridge. Core (not an extra) because logging
    # is foundational — every command routes diagnostics through it. Floor matches
    # the configure/ProcessorFormatter/ConsoleRenderer API the module is written
    # against. OTel SDK stays a later, optional concern (ws[otel], bead cit.2).
    "structlog>=24",
    # FastMCP powers `ws-mcp` / `ws mcp serve`. Core (not an extra) because the agf
    # claude-plugin auto-registers the ws MCP server (plugins/agf/.mcp.json → ws-mcp),
    # so a missing extra silently breaks the plugin. Floor matches the API the tools
    # were written + verified against (3.4.x: bare `@mcp.tool`, dict→structured_content,
    # ToolError propagation).
    "fastmcp>=3.4,<4",
]

[project.optional-dependencies]
# backward compat — fastmcp is now a core dependency (see [project].dependencies).
# `ws[mcp]` remains resolvable as an empty alias so existing install commands don't break.
mcp = []
# `ws[otel]` — the OpenTelemetry SDK + OTLP (gRPC) exporters that `ws.otel.init` wires into
# Tracer/Meter/Logger providers + the structlog→OTel log bridge. Kept optional + lazily
# imported so `import ws.otel` (and the core CLI) install/run fine without it; init() no-ops
# with an install hint when the flag is on but these are absent. structlog is listed here too
# (it's already a core dep) so the bridge surface is explicit for this extra. Floors match the
# SDK API the module targets: 1.x providers (`Resource.create`, `set_*_provider`), OTLP
# `*Exporter`, Batch processors, and `sdk._logs.LoggingHandler`.
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "structlog>=24",
]

[project.scripts]
ws = "ws.cli:main"
ws-mcp = "ws.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ws"]

[tool.hatch.build.targets.wheel.force-include]
"plugins/agf/skills" = "ws/assets/skills"
"plugins/agf/agents" = "ws/assets/agents"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    # Validates the report-channel spec artifact (docs/schemas/*.json) against its example
    # in tests/test_report_channel.py. Explicit (not leaned on as an mcp transitive) so the
    # `just check` schema gate stands on its own. Draft 2020-12 support lands well before 4.x.
    "jsonschema>=4",
]

[tool.pytest.ini_options]
markers = [
    "integration: real-bd AGF topology harness (slower; needs the bd binary)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
