[project]
name = "beadhive"
version = "0.4.0"
description = "Beadhive CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "ruamel.yaml>=0.18",
    # Logging foundation: structlog drives dual-mode output (rich/ANSI on a TTY,
    # JSON for machines) + the stdlib bridge. Core (not an extra) because logging
    # is foundational — every command routes diagnostics through it. Floor matches
    # the configure/ProcessorFormatter/ConsoleRenderer API the module is written
    # against. OTel SDK stays a later, optional concern (beadhive[otel], bead cit.2).
    "structlog>=24",
    # FastMCP powers `bh-mcp` / `bh mcp serve`. Core (not an extra) because the bh
    # claude-plugin auto-registers the MCP server (the plugin's .mcp.json → bh-mcp),
    # so a missing extra silently breaks the plugin. Floor matches the API the tools
    # were written + verified against (3.4.x: bare `@mcp.tool`, dict→structured_content,
    # ToolError propagation).
    "fastmcp>=3.4,<4",
    # Env var config (config._Env): declares the BH_* prefix once (env_prefix) instead of
    # repeating it per var, with AliasChoices carrying the deprecated WS_* fallback names
    #. Already resolved transitively via fastmcp/pydantic; pinned direct
    # since config.py now depends on its API, not just whatever fastmcp happens to pull in.
    "pydantic-settings>=2.11",
]

[project.optional-dependencies]
# backward compat — fastmcp is now a core dependency (see [project].dependencies).
# `beadhive[mcp]` remains resolvable as an empty alias so existing install commands don't break.
mcp = []
# `beadhive[otel]` — the OpenTelemetry SDK + OTLP (gRPC) exporters that `beadhive.otel.init`
# wires into Tracer/Meter/Logger providers + the structlog→OTel log bridge. Kept optional +
# lazily imported so `import beadhive.otel` (and the core CLI) install/run fine without it;
# init() no-ops with an install hint when the flag is on but these are absent. structlog is
# listed here too (it's already a core dep) so the bridge surface is explicit for this extra.
# Floors match the SDK API the module targets: 1.x providers (`Resource.create`,
# `set_*_provider`), OTLP `*Exporter`, Batch processors, and `sdk._logs.LoggingHandler`.
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp>=1.27",
    "structlog>=24",
]

[project.scripts]
bh = "beadhive.cli:main"
bh-mcp = "beadhive.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beadhive"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    # Validates the report-channel spec artifact (docs/schemas/*.json) against its example
    # in tests/test_report_channel.py. Explicit (not leaned on as an mcp transitive) so the
    # `just check` schema gate stands on its own. Draft 2020-12 support lands well before 4.x.
    "jsonschema>=4",
    "commitizen>=4.16.4",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "pep440"
tag_format = "v$version"
# Stay pre-1.0: a breaking change bumps the MINOR (0.2 -> 0.3), not the major.
# Flip to 1.0.0 deliberately, not because of a `feat!` commit.
major_version_zero = true
# tag.gpgsign=true forces annotated tags, which need a message; cz must create them annotated
annotated_tag = true

[tool.pytest.ini_options]
markers = [
    "integration: real-bd AGF topology harness (slower; needs the bd binary)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
